# mtg

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  aggregators.py  card_aggregator.py  card_counter.py  card_utils.py  cards_by_name.html  constants.py  count_card_illustrations_by_set.html  count_card_illustrations_by_set.json  count_cards_by_name.html  count_cards_by_name.json  count_cards_by_set_name.html  count_cards_by_set_name.json  count_finishes_by_name.html  count_finishes_by_name.json  count_finishes_by_set_name.html  count_finishes_by_set_name.json  counter_config.yaml  file_utils.py  finishes_by_name.html  first_card_by_generalized_mana_cost.html  first_card_by_generalized_mana_cost.json  first_card_by_power_toughness.html  first_card_by_power_toughness.json  foil_types_by_name.html  foil_types_by_name.json  index.html  max_collector_number_by_set.html  max_collector_number_by_set.json  maximal_printed_types.html  maximal_printed_types.json  maximal_types_with_effects.html  (+10 more)
.github/workflows/: publish_html.yml
20240710_005540/: cards_by_name.html  index.html
aggregators/: __init__.py  base.py  count_aggregators.py  creature_type_aggregators.py  first_card_aggregators.py  metadata_aggregators.py  supercycle_aggregators.py  type_aggregators.py
data/manual/: supercycles.json  supercycles.yaml
templates/: base_template.html  counter_template.html  index_template.html
tests/: conftest.py  test_card_utils.py  test_setup.py  test_type_updater.py
