[project]
name = "mtg-card-aggregator"
version = "0.0.1"
requires-python = ">= 3.12"
dependencies = [
    "typer",
    "rich",
    "ijson",
    "requests",
    "jinja2",
    "beautifulsoup4>=4.13.3",
    "pyyaml>=6.0.2",
    "markdown>=3.7",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
